= Changelog
:toc:

== master: Breaking Changes

* Refactor `NewCommmand()` as a method.
This will allow the built-in help to have information about the parent.
It might also help with autocompletion.

== v0.16.0 Feature release

As the releases before, this release has 100% test coverage.

=== Fixes

* Bug Fix: Update `opt.Dispatch` not to handle `--help` option.
It was preventing the help option to reach the commands.

=== New Features

* Introduce `opt.HelpSynopsisArgs(string)` method to allow overriding the default args description.
The current default description is `[<args>]`.

=== Minor changes

* Make `SetMode`, `SetUnknownMode`, `SetRequireOrder` and `SetMapKeysToLower` chainable.

== v0.15.0 Feature release

As the releases before, this release has 100% test coverage.

Change workflow to deal with ambiguities between parent and child.

For example, the root may have option `--profile` and the command the option `--password` with alias `-p`. If `-p` is passed, the parent would uncorrectly be matched.

For the parent to properly handle ambiguities with its children, it needs to have knowledge of them. A new `getoptions.NewCommand` has been introduced.

To help with the verbosity of handling all the commands, a new `Dispatch` method is introduced, it will call a command's function defined with the new `SetCommandFn` method.

=== New Features

• Introduce `getoptions.NewCommand()` to declare commands and clearly separate their role from the main `getoptions.New()`.

• Introduce `command.SetCommandFn(fn CommandFn)` to declare a commands function callback.

• Introduce `opt.Dispatch(helpOptionName string, args []string)` to automatically handle dispatching to the `CommandFn` based on the cli input.

• Make options unambiguous with commands.
For example, the root may have option `--profile` and the command the option `--password` with alias `-p`. If `-p` is passed, the parent would uncorrectly be matched.
